mobile design added

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="card">
         <div class="card_box_top">
           <h2 class="card_box_title">Join our community</h2>
-          <div class="flex-group_top">
+          <div class="flex-group-top">
             <p class="card_box_subtitle">
               <span class="card_box_top_span"
                 >30-day, hassle-free money back guarantee</span
@@ -57,7 +57,7 @@
         </div>
         <div class="card_box_second">
           <p class="card_box_subtitle">Monthly Subscription</p>
-          <div class="flex-group_second">
+          <div class="flex-group-second">
             <p class="card_box_price">
               <span class="card_box_price_span">&dollar;29</span> per month
             </p>
@@ -69,11 +69,17 @@
         </div>
         <div class="card_box_third">
           <p class="card_box_subtitle">Why Us</p>
-          <p class="card_box_small_p">
-            Tutorials by industry experts Peer &amp; expert code review Coding
-            exercises Access to our GitHub repos Community forum Flashcard decks
-            New videos every week
-          </p>
+          <div>
+            <ul class="card_box_list">
+              <li>Tutorials by industry experts</li>
+              <li>Peer &amp; expert code review</li>
+              <li>Coding exercises</li>
+              <li>Access to our GitHub repos</li>
+              <li>Community forum</li>
+              <li>Flashcard decks</li>
+              <li>New videos every week</li>
+            </ul>
+          </div>
         </div>
       </div>
     </main>
