--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       .attribution {
         font-size: 11px;
         text-align: center;
+        padding-top: 1rem;
       }
       .attribution a {
         color: hsl(228, 45%, 44%);
@@ -82,15 +83,15 @@
           </div>
         </div>
       </div>
+      <footer>
+        <p class="attribution">
+          Challenge by
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+            >Frontend Mentor</a
+          >. Coded by
+          <a href="https://github.com/DeyanTopalov">Deyan Topalov</a>.
+        </p>
+      </footer>
     </main>
-
-    <!-- <footer>
-      <p class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
-      </p>
-    </footer> -->
   </body>
 </html>
